fixed layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,6 +72,7 @@ button {
     pointer-events: all;
     top: 60px;
     position: relative;
+    padding: 10px;
 }
 
 .non-clickable {
@@ -134,3 +135,7 @@ button {
     font-size: 100%;
 }
 
+button .mat-icon {
+    height: 30px;
+    width: 30px
+}
